Fix customizer so it works on ui-grid.info (had to dynamically point to ui-grid-unstable.css/ui-grid.css at top of file. Also added scrollbar border variables

--- a/src/less/scrollbar.less
+++ b/src/less/scrollbar.less
@@ -9,6 +9,7 @@
   cursor: pointer;
   // transform: translateZ(0);
 
+  border: @scrollbarBorder;
   .rounded(@scrollbarBorderRadius);
   .box-shadow(@scrollbarShadow);
   // .transition(300ms, linear);
@@ -27,9 +28,12 @@
   //   right: 4px;
   // }
 }
+
 .ui-grid-scrollbar:hover {
   background: @scrollbarBackgroundHover;
 }
+
 .ui-grid-scrollbar.ui-scrolling {
   background: @scrollbarBackgroundScrolling;
+  border: @scrollbarBorderScrolling;
 }
